# MaxFilterGroupBackend

./: .gitignore  README.md  main.py  pyproject.toml
alembic/versions/: 0f3541a1e6f3_test.py  88179e39cf1e_test.py  e63166919ae0_test.py
api_v1/auth/: views.py
api_v1/grid/: crud.py  schemas.py  views.py
api_v1/group/: crud.py  schemas.py  views.py
api_v1/user/: crud.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  grid.py  group.py  user.py
